force-app/main/default/objects/Third_Party_Contract_Master__c/Third_Party_Contract_Master__c.object-meta.xml
<CustomObject>
    <label>Hydrocarbon Formulas</label>
    <nameField>
        <displayFormat>3P-{0}</displayFormat>
        <label>Third Party Contract Master	 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hydrocarbon Formulas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>