force-app/main/default/objects/Third_Party_Contract_Master__c/fields/Additive_provider__c.field-meta.xml
<CustomField>
    <fullName>Additive_provider__c</fullName>
    <label>Additive provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>