force-app/main/default/objects/Third_Party_Contract_Master__c/fields/Additive_surcharge__c.field-meta.xml
<CustomField>
    <fullName>Additive_surcharge__c</fullName>
    <label>Additive surcharge (€/CBM)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>