force-app/main/default/objects/Third_Party_Contract_Master__c/fields/Alternate_Type__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Type__c</fullName>
    <label>Alternate Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>