force-app/main/default/objects/Third_Party_Contract_Master__c/fields/Average_Multiplier_Quote__c.field-meta.xml
<CustomField>
    <fullName>Average_Multiplier_Quote__c</fullName>
    <label>Average Multiplier Quote</label>
    <length>255</length>
    <type>Text</type>
</CustomField>