force-app/main/default/objects/Third_Party_Contract_Master__c/fields/Average_Quote_2__c.field-meta.xml
<CustomField>
    <fullName>Average_Quote_2__c</fullName>
    <label>Average Quote 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>