force-app/main/default/objects/Third_Party_Contract_Master__c/fields/Base_Quote_1__c.field-meta.xml
<CustomField>
    <fullName>Base_Quote_1__c</fullName>
    <label>Base Quote 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>