force-app/main/default/objects/Third_Party_Contract_Master__c/fields/Base_Quote_1_Percent__c.field-meta.xml
<CustomField>
    <fullName>Base_Quote_1_Percent__c</fullName>
    <label>Base Quote 1 %(for calc.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>