force-app/main/default/objects/Third_Party_Contract_Master__c/fields/Bio_Quote__c.field-meta.xml
<CustomField>
    <fullName>Bio_Quote__c</fullName>
    <label>Bio Quote %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>