force-app/main/default/objects/Third_Party_Contract_Master__c/fields/Bio_Quote_Info__c.field-meta.xml
<CustomField>
    <fullName>Bio_Quote_Info__c</fullName>
    <formula>TEXT( Bio_Quote__c *100) +&apos; &apos;+&apos;%&apos;+ IF(NOT(ISBLANK(TEXT(Bio_Quotes__c))), &apos;*&apos; + &apos; &apos;+ TEXT(Bio_Quotes__c),&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bio Quote Info</label>
    <type>Text</type>
</CustomField>