force-app/main/default/objects/Third_Party_Contract_Master__c/fields/Bio_Quotes__c.field-meta.xml
<CustomField>
    <fullName>Bio_Quotes__c</fullName>
    <label>Bio Quote Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Platts FOB R&apos;dam Ethanol T2 GermanSpec (€) (high)</fullName>
            </value>
            <value>
                <fullName>Argus Biodiesel RED FAME -10°C CFPP FOB ARA (mean)</fullName>
            </value>
            <value>
                <fullName>Platts FOB R&apos;dam Ethanol T2 GermanSpec (€) (mean)</fullName>
            </value>
            <value>
                <fullName>Platts FOB ARA NWE RED FAME 0 (high)</fullName>
            </value>
            <value>
                <fullName>Platts FOB ARA NWE RED FAME-10 (high)</fullName>
            </value>
            <value>
                <fullName>Argus Biodiesel RED FAME -10°C CFPP FOB ARA (ask)</fullName>
            </value>
            <value>
                <fullName>Argus Biodiesel RED FAME 0°C CFPP FOB ARA (mean)</fullName>
            </value>
            <value>
                <fullName>Platts FOB R&apos;dam Ethanol T2 (€) (high)</fullName>
            </value>
            <value>
                <fullName>Platts FOB R&apos;dam Ethanol T2 (€) (low)</fullName>
            </value>
            <value>
                <fullName>Platts FOB R&apos;dam Ethanol T2 (€) (mean)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>