force-app/main/default/objects/Third_Party_Contract_Master__c/fields/Bio_surcharge__c.field-meta.xml
<CustomField>
    <fullName>Bio_surcharge__c</fullName>
    <label>Bio surcharge(€/CBM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>