force-app/main/default/objects/Third_Party_Contract_Master__c/fields/CONTRACT_BASE_QUOTE_ONEPERCENT__c.field-meta.xml
<CustomField>
    <fullName>CONTRACT_BASE_QUOTE_ONEPERCENT__c</fullName>
    <label>Base Quote 1 % (from Contract)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>