force-app/main/default/objects/Third_Party_Contract_Master__c/fields/Depot__c.field-meta.xml
<CustomField>
    <fullName>Depot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Depot</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipName>Third_Party_Contract_Masters</relationshipName>
    <type>Lookup</type>
</CustomField>