force-app/main/default/objects/Third_Party_Contract_Master__c/fields/Differential_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Differential_Calculation__c</fullName>
    <label>Differential Calculation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>