force-app/main/default/objects/Third_Party_Contract_Master__c/fields/Differential_Quote_1_Percent__c.field-meta.xml
<CustomField>
    <fullName>Differential_Quote_1_Percent__c</fullName>
    <label>Differential Quote 1 %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>