force-app/main/default/objects/Third_Party_Contract_Master__c/fields/Differential_Quote_2__c.field-meta.xml
<CustomField>
    <fullName>Differential_Quote_2__c</fullName>
    <label>Differential Quote 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>