force-app/main/default/objects/Third_Party_Contract_Master__c/fields/Frieight_Quote__c.field-meta.xml
<CustomField>
    <fullName>Frieight_Quote__c</fullName>
    <label>Frieight Quote</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reuters (PJK) Rhine Freight Gasoil ARA-Cologne</fullName>
            </value>
            <value>
                <fullName>Reuters (PJK) Rhine Freight Gasoline ARA-Cologne</fullName>
            </value>
            <value>
                <fullName>Reuters (PJK) Rhine Freight Gasoil ARA-Karlsruhe</fullName>
            </value>
            <value>
                <fullName>Reuters (PJK) Rhine Freight Gasoil ARA-BasleSFR</fullName>
                <isActive>false</isActive>
                <label>Reuters (PJK) Rhine Freight Gasoil ARA-BasleSFR</label>
            </value>
            <value>
                <fullName>Reuters (PJK) Rhine Freight Gasoil ARA-Dortmund</fullName>
                <isActive>false</isActive>
                <label>Reuters (PJK) Rhine Freight Gasoil ARA-Dortmund</label>
            </value>
            <value>
                <fullName>Reuters (PJK) Rhine Freight Gasoil ARA-Duisburg</fullName>
                <isActive>false</isActive>
                <label>Reuters (PJK) Rhine Freight Gasoil ARA-Duisburg</label>
            </value>
            <value>
                <fullName>Reuters (PJK) Rhine Freight Gasoil ARA-Frankfurt</fullName>
                <isActive>false</isActive>
                <label>Reuters (PJK) Rhine Freight Gasoil ARA-Frankfurt</label>
            </value>
            <value>
                <fullName>Reuters (PJK) Rhine Freight Gasoline ARA-BasleSFR</fullName>
                <isActive>false</isActive>
                <label>Reuters (PJK) Rhine Freight Gasoline ARA-BasleSFR</label>
            </value>
            <value>
                <fullName>Reuters (PJK) Rhine Freight Gasoline ARA-Dortmund</fullName>
                <isActive>false</isActive>
                <label>Reuters (PJK) Rhine Freight Gasoline ARA-Dortmund</label>
            </value>
            <value>
                <fullName>Reuters (PJK) Rhine Freight Gasoline ARA-Duisburg</fullName>
                <isActive>false</isActive>
                <label>Reuters (PJK) Rhine Freight Gasoline ARA-Duisburg</label>
            </value>
            <value>
                <fullName>Reuters (PJK) Rhine Freight Gasoline ARA-Frankfurt</fullName>
                <isActive>false</isActive>
                <label>Reuters (PJK) Rhine Freight Gasoline ARA-Frankfurt</label>
            </value>
            <value>
                <fullName>Reuters (PJK) Rhine Freight Gasoline ARA-Karlsruhe</fullName>
                <isActive>false</isActive>
                <label>Reuters (PJK) Rhine Freight Gasoline ARA-Karlsruhe</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>