force-app/main/default/objects/Third_Party_Contract_Master__c/fields/Frieight_Quote_Info__c.field-meta.xml
<CustomField>
    <fullName>Frieight_Quote_Info__c</fullName>
    <formula>TEXT(  Frieight_Quote_per__c *100) +&apos; &apos;+&apos;%&apos;+ IF(NOT(ISBLANK(TEXT( Frieight_Quote__c ))), &apos;*&apos; + &apos; &apos;+ TEXT(Frieight_Quote__c ),&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Frieight Quote Info</label>
    <type>Text</type>
</CustomField>