force-app/main/default/objects/Third_Party_Contract_Master__c/fields/Frieight_Quote_per__c.field-meta.xml
<CustomField>
    <fullName>Frieight_Quote_per__c</fullName>
    <label>Frieight Quote %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>