force-app/main/default/objects/Third_Party_Contract_Master__c/fields/Future_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Future_Calculation__c</fullName>
    <label>Future Calculation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>