force-app/main/default/objects/Third_Party_Contract_Master__c/fields/Grade__c.field-meta.xml
<CustomField>
    <fullName>Grade__c</fullName>
    <label>Grade</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ULG98</fullName>
            </value>
            <value>
                <fullName>AGO B7</fullName>
            </value>
            <value>
                <fullName>IGO 50ppm</fullName>
            </value>
            <value>
                <fullName>IGO 1000ppm</fullName>
            </value>
            <value>
                <fullName>ULG95 E10</fullName>
            </value>
            <value>
                <fullName>ULG95 E5</fullName>
            </value>
            <value>
                <fullName>AGO B0</fullName>
            </value>
            <value>
                <fullName>AGO B0 CH</fullName>
            </value>
            <value>
                <fullName>AGO B7 CH</fullName>
            </value>
            <value>
                <fullName>AGO VPD</fullName>
            </value>
            <value>
                <fullName>GTL B0</fullName>
            </value>
            <value>
                <fullName>AVGAS</fullName>
            </value>
            <value>
                <fullName>IGO 10ppm</fullName>
            </value>
            <value>
                <fullName>ULG100 VP</fullName>
            </value>
            <value>
                <fullName>ULG95 E0</fullName>
            </value>
            <value>
                <fullName>ULG95_BOB_E5</fullName>
            </value>
            <value>
                <fullName>ULG95_BOB_E10</fullName>
            </value>
            <value>
                <fullName>GTL B7</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>