force-app/main/default/objects/Third_Party_Contract_Master__c/fields/GradeLocation__c.field-meta.xml
<CustomField>
    <fullName>GradeLocation__c</fullName>
    <formula>IF( isThirdParty__c,
			 TEXT(SalesOrg_Customer__c)+&quot;_&quot;+Supply_Route_ID_Name__c,           
				TEXT(Grade__c)+&quot;_&quot;+ Shell_Owned_Type__c+Alternate_Type__c 
			)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GradeLocation</label>
    <type>Text</type>
</CustomField>