force-app/main/default/objects/Third_Party_Contract_Master__c/fields/Incoterm__c.field-meta.xml
<CustomField>
    <fullName>Incoterm__c</fullName>
    <label>Incoterm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>