force-app/main/default/objects/Third_Party_Contract_Master__c/fields/isThirdParty__c.field-meta.xml
<CustomField>
    <fullName>isThirdParty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isThirdParty</label>
    <type>Checkbox</type>
</CustomField>