force-app/main/default/objects/Third_Party_Contract_Master__c/fields/Loc_Diff__c.field-meta.xml
<CustomField>
    <fullName>Loc_Diff__c</fullName>
    <label>Loc Diff(€/mt)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>