force-app/main/default/objects/Third_Party_Contract_Master__c/fields/MoT_Purchase__c.field-meta.xml
<CustomField>
    <fullName>MoT_Purchase__c</fullName>
    <label>Mode of Transport(MOT)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>