force-app/main/default/objects/Third_Party_Contract_Master__c/fields/Plant_Code__c.field-meta.xml
<CustomField>
    <fullName>Plant_Code__c</fullName>
    <formula>Depot__r.Plant_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plant Code</label>
    <type>Text</type>
</CustomField>