force-app/main/default/objects/Third_Party_Contract_Master__c/fields/Product_sub_grade__c.field-meta.xml
<CustomField>
    <fullName>Product_sub_grade__c</fullName>
    <label>Product sub grade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>