force-app/main/default/objects/Third_Party_Contract_Master__c/fields/SalesOrg_Customer__c.field-meta.xml
<CustomField>
    <fullName>SalesOrg_Customer__c</fullName>
    <label>Sales Organization</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AT01</fullName>
            </value>
            <value>
                <fullName>DE01</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>