force-app/main/default/objects/Third_Party_Contract_Master__c/fields/Shell_Owned_Type__c.field-meta.xml
<CustomField>
    <fullName>Shell_Owned_Type__c</fullName>
    <label>Shell Owned Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>