force-app/main/default/objects/Third_Party_Contract_Master__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipName>Third_Party_Contract_Masters1</relationshipName>
    <type>Lookup</type>
</CustomField>