force-app/main/default/objects/Third_Party_Contract_Master__c/fields/Supplement_Quote_1__c.field-meta.xml
<CustomField>
    <fullName>Supplement_Quote_1__c</fullName>
    <label>Supplement Quote 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>