force-app/main/default/objects/Third_Party_Contract_Master__c/fields/Supplement_Quote_2__c.field-meta.xml
<CustomField>
    <fullName>Supplement_Quote_2__c</fullName>
    <label>Supplement Quote 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>