force-app/main/default/objects/Third_Party_Contract_Master__c/fields/Supply_Route_ID__c.field-meta.xml
<CustomField>
    <fullName>Supply_Route_ID__c</fullName>
    <label>Supply Route ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>