force-app/main/default/objects/Third_Party_Contract_Master__c/fields/Thruput_charge__c.field-meta.xml
<CustomField>
    <fullName>Thruput_charge__c</fullName>
    <label>Thruput charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>