force-app/main/default/objects/Third_Party_Contract_Master__c/validationRules/Making_Fields_Required_for_Third_Party.validationRule-meta.xml
<ValidationRule>
    <fullName>Making_Fields_Required_for_Third_Party</fullName>
    <active>false</active>
    <errorConditionFormula>AND(isThirdParty__c = TRUE,
 OR(
    ISBLANK( Depot__c ),
    ISBLANK(TEXT(Grade__c )),
    ISBLANK(MoT_Purchase__c ),
    ISBLANK(Source__c ),
   ISBLANK(TEXT(Supplier__c ))
) 
)</errorConditionFormula>
    <errorMessage>Required fields are missing</errorMessage>
</ValidationRule>