force-app/main/default/objects/Third_Party_Contract_Master__c/listViews/All_Shell_Owned.listView-meta.xml
<ListView>
    <fullName>All_Shell_Owned</fullName>
    <columns>NAME</columns>
    <columns>GradeLocation__c</columns>
    <columns>Average_Quote_1__c</columns>
    <columns>Supplement_Quote_1__c</columns>
    <columns>Average_Quote_2__c</columns>
    <columns>Supplement_Quote_2__c</columns>
    <columns>Base_Quote_1__c</columns>
    <columns>Differential_Quote_1__c</columns>
    <columns>Differential_Quote_1_Percent__c</columns>
    <columns>Differential_Quote_2__c</columns>
    <columns>Differential_Quote_2_Percent__c</columns>
    <columns>Alternate_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Shell_Owned_Type__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>isThirdParty__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All Shell Owned</label>
</ListView>